Fix overflow-x scrollbar appearing

--- a/src/style.css
+++ b/src/style.css
@@ -58,6 +58,7 @@ body {
 
 .scroll-container {
   overflow-y: auto;
+  overflow-x: hidden;
   min-height: 100%;
   max-height: 100%;
 }
